--- a/Quantumult/X/Rewrite.conf
+++ b/Quantumult/X/Rewrite.conf
@@ -61,7 +61,7 @@ hostname = *.amemv.com,*.iydsj.com,*.k.sohu.com,*.tv.sohu.com,*.kakamobi.cn,*.ki
 
 # TikTok
 (?<=(carrier|account|sys|current|sim)_region=)CN url 307 JP
-(?<=(is_my_cn=)1 url 307 0
+(?<=is_my_cn=)1 url 307 0
 # (?<=version_code=)\d{1,}.\d{1}\.\d{1} url 307 8.0.0
 # Resso
 #(?<=(carrier|account|sys|sim)_region=)cn url 307 in
