--- a/Quantumult/X/Rewrite.conf
+++ b/Quantumult/X/Rewrite.conf
@@ -60,9 +60,7 @@ hostname = *.amemv.com,*.iydsj.com,*.k.sohu.com,*.tv.sohu.com,*.kakamobi.cn,*.ki
 ^https?:\/\/(www.)?zbrushcn.com/ url 302 https://pixologic.com/
 
 # TikTok
-(?<=(carrier|account|sys|current|sim)_region=)CN url 307 JP
-(?<=is_my_cn=)\d{1,} url 307 0
-(?<=mcc_mnc=)\d{5} url 307 44191
+(?<=(carrier|account|sys|current|sim)_region=)CN url 307 JP|(?<=is_my_cn=)\d{1,} url 307 0|(?<=mcc_mnc=)\d{5} url 307 44191
 # (?<=version_code=)\d{1,}.\d{1}\.\d{1} url 307 8.0.0
 # Resso
 #(?<=(carrier|account|sys|sim)_region=)cn url 307 in
