--- a/Quantumult/X/Rewrite.conf
+++ b/Quantumult/X/Rewrite.conf
@@ -60,6 +60,7 @@ hostname = *.amemv.com,*.iydsj.com,*.k.sohu.com,*.tv.sohu.com,*.kakamobi.cn,*.ki
 ^https?:\/\/(www.)?zbrushcn.com/ url 302 https://pixologic.com/
 
 # TikTok
+(.*video_id=\w{32})(.*watermark=)(.*) url 302 $1
 (?<=(carrier|account|sys|current|sim)_region=)CN url 307 JP
 #(?<=is_my_cn=)\d{1,} url 307 0
 #(?<=mcc_mnc=)\d{5} url 307 44191
